--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "popper.js": "^1.16.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass-watch"  : "sass --watch assets/sass/main.scss:assets/css/style.css"
   },
   "repository": {
     "type": "git",
