--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "devDependencies": {
     "jquery": "^3.4.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "stickybits": "^3.7.6"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass-watch"  : "sass --watch assets/sass/main.scss:assets/css/style.css"
+    "sass-watch": "sass --watch assets/sass/main.scss:assets/css/style.css"
   },
   "repository": {
     "type": "git",
